--- a/Smartphone-Admin/vite-project/src/App.css
+++ b/Smartphone-Admin/vite-project/src/App.css
@@ -1,10 +1,73 @@
 .body {
-  margin: 0;
-  padding: 0;
+
   background-color: #FFD700;
   color: #9e9ea4;
   font-family: 'Courier New', Courier, monospace;
 }
+
+/* Login style */
+.login-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #efefb1;
+}
+
+.login-form {
+  background-color: rgb(255, 172, 5);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(54, 55, 11, 0.1);
+  max-width: 300px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.login-header img {
+  width: 50px;
+  margin-bottom: 10px;
+}
+
+.login-header h2 {
+  margin-bottom: 20px;
+}
+
+.login-field {
+  margin-bottom: 15px;
+}
+
+.login-field label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.login-field input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+/* End Login style */
 
 /* icon style */
 .icon {
